[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[lib]
name = "kvstore"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.2", features = ["serde", "v4"]}
byteorder = "1.4"
crc32fast = "1.3"

